@@ -6,6 +6,8 @@ Version 0.15.0
   Added getter node_descriptor_useNENRD
   added getter node_descriptor_useEventIndex
   added event_teach_by_index used when useEventIndex is true
+  added ActivateSlotDialog
+  added EventIdentityDialog
 
 Version 0.14.0
   Added 'show events only' to BusTraffic side bar
